wier/force-app/main/default/objects/Registration_for_Product_Groups__c/Registration_for_Product_Groups__c.object-meta.xml
<CustomObject>
    <label>Registration for Product Groups</label>
    <nameField>
        <displayFormat>RPGID-{000000000}</displayFormat>
        <label>RPGID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration for Product Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>