wier/force-app/main/default/objects/Registration_for_Product_Groups__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registration for Product Groups</relationshipLabel>
    <relationshipName>Registration_for_Product_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>