wier/force-app/main/default/objects/Registration_for_Product_Groups__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Completion date / Regn valid upto</label>
    <type>Date</type>
</CustomField>