wier/force-app/main/default/objects/Registration_for_Product_Groups__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>206 / 602 - Flow Iron</fullName>
            </value>
            <value>
                <fullName>API 16A - BOP Repairs</fullName>
            </value>
            <value>
                <fullName>API 16A - Drilling Spools, Adapters, Clamps, Hubs</fullName>
            </value>
            <value>
                <fullName>API 16 C - Supply, Inspection, Repair &amp; Recertification of C&amp;K Manifolds &amp; Hard Lines</fullName>
            </value>
            <value>
                <fullName>API 16 D - BOP Control Systems</fullName>
            </value>
            <value>
                <fullName>API 5CT - Supply, Inspection &amp; Repair of Casing, Tubing, X-Over and Pup Joints</fullName>
            </value>
            <value>
                <fullName>API 6A - Chokes</fullName>
            </value>
            <value>
                <fullName>API 6A - Pressure Boundary Products (Flanges, Double Studded Adapters, Studed Blocks, Flanged Blocks, Spools, BOP Test Stump)</fullName>
            </value>
            <value>
                <fullName>API 6A - Standpipe Manifold</fullName>
            </value>
            <value>
                <fullName>API 6A - Surface Safety Valves</fullName>
            </value>
            <value>
                <fullName>API 6A - Valves</fullName>
            </value>
            <value>
                <fullName>API 6A - Wellhead &amp; Valve Maintenance</fullName>
            </value>
            <value>
                <fullName>API 6 A - Wellhead &amp; X-mas Tree Supply</fullName>
            </value>
            <value>
                <fullName>API 6A - Wellhead Accessories Inc Spools/ DSA&apos;s,  Tees &amp; Xs, X-over connectors</fullName>
            </value>
            <value>
                <fullName>API 6A - Well Test Manifold</fullName>
            </value>
            <value>
                <fullName>API 7-1 - Supply, Inspection &amp; Repair of Drill Pipes &amp; Crossovers</fullName>
            </value>
            <value>
                <fullName>APS - Pump, Compressors, Turbine</fullName>
            </value>
            <value>
                <fullName>Cement and Frac Heads</fullName>
            </value>
            <value>
                <fullName>Customer Training</fullName>
            </value>
            <value>
                <fullName>Drilling Stabilizers &amp; Fishing tools Tungsten Carbide Hard facing services</fullName>
            </value>
            <value>
                <fullName>Electric Motor Repairs</fullName>
            </value>
            <value>
                <fullName>Fabrication (Baskets, skids, fittings)</fullName>
            </value>
            <value>
                <fullName>Fabrication - Pump / Compressor Skids</fullName>
            </value>
            <value>
                <fullName>Field Service - Downstream</fullName>
            </value>
            <value>
                <fullName>Field Service - Upstream</fullName>
            </value>
            <value>
                <fullName>Flow Iron (Hammer Unions, X-ovrs, pup joints and caps</fullName>
            </value>
            <value>
                <fullName>Flow Metering Skids</fullName>
            </value>
            <value>
                <fullName>Hard Banding</fullName>
            </value>
            <value>
                <fullName>In Situ Machining Services</fullName>
            </value>
            <value>
                <fullName>Maintenance Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>