wier/force-app/main/default/objects/Registration_for_Product_Groups__c/fields/Reg_valid_upto__c.field-meta.xml
<CustomField>
    <fullName>Reg_valid_upto__c</fullName>
    <label>Reg. valid upto</label>
    <type>Date</type>
</CustomField>