wier/force-app/main/default/objects/Registration_for_Product_Groups__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not yet Started</fullName>
            </value>
            <value>
                <fullName>Documents under compilation</fullName>
            </value>
            <value>
                <fullName>Documents Submitted</fullName>
            </value>
            <value>
                <fullName>Registered with the Customer</fullName>
            </value>
            <value>
                <fullName>Rejected by Customer</fullName>
            </value>
            <value>
                <fullName>Registration Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>