wier/force-app/main/default/objects/Registration_for_Product_Groups__c/validationRules/Registration_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_valid</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Registered with the Customer&apos;)  &amp;&amp;  ISBLANK(  Date__c )</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Please enter registration valid date</errorMessage>
</ValidationRule>